# autotools-guile-example-v2

./: Makefile.am  README.org  configure.ac
app/: Makefile.am  hello-world.scm
m4/: guile2.m4
src/foo/: Makefile.am  config.scm.in  factorial.scm
